Attempting to fix the Firefox header issue
The issue on Firefox is that the logo banner takes too much space, meaning the site looks really wonky. Changing from Flex to Grid as a possible fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ header > a{
 }
 
 .header_logo{
-    height: 100%;
+    height: 50px;
     background-color: var(--deepblue);
 }
 
@@ -112,8 +112,9 @@ nav{
 }
 
 .logo_banner{
-    display: flex;    
-    max-width: 100%;
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 120fr;
 }
 
 .site_name{
